bad/bin_op_or_string_int.example_compiler_output
ERROR
[1mbad/bin_op_or_string_int.lat:3:5: [1;31merror: [0;1moperator || is defined only for `boolean` values, not `string` and `int`[m
	"" || 42;
	   [1;32m^[m
